# ALGOPY

Projets/ALGOPY/dossier.py/: README.md  app.py  cars.html  cars_extrator.py  explore.py  feature_names.txt  features_modalities.txt  formulaire.py  model_helper.py  model_training.ipynb  models_dataclasses.py  objets.py  playwright_cars.py  pyproject.toml  utils.py  voitures.csv
Projets/ALGOPY/dossier.py/cars-html/: cars2025-05-01T11_59_04Z.html  cars2025-05-01T11_59_05Z.html  cars2025-05-01T11_59_07Z.html  cars2025-05-01T11_59_08Z.html  cars2025-05-01T11_59_09Z.html  cars2025-05-01T11_59_10Z.html  cars2025-05-01T11_59_11Z.html  cars2025-05-01T11_59_13Z.html  cars2025-05-01T11_59_14Z.html  cars2025-05-01T11_59_15Z.html  cars2025-05-01T11_59_17Z.html  cars2025-05-01T11_59_18Z.html  cars2025-05-01T11_59_20Z.html  cars2025-05-01T11_59_21Z.html  cars2025-05-01T11_59_24Z.html  cars2025-05-01T11_59_25Z.html  cars2025-05-01T11_59_27Z.html  cars2025-05-01T11_59_30Z.html  cars2025-05-01T11_59_31Z.html  cars2025-05-01T11_59_32Z.html  cars2025-05-01T11_59_33Z.html  cars2025-05-01T11_59_35Z.html  cars2025-05-01T11_59_36Z.html  cars2025-05-01T11_59_37Z.html  cars2025-05-01T11_59_38Z.html  cars2025-05-01T11_59_40Z.html  cars2025-05-01T11_59_42Z.html  cars2025-05-01T11_59_43Z.html  cars2025-05-01T11_59_44Z.html  cars2025-05-01T11_59_46Z.html  cars2025-05-01T11_59_47Z.html  cars2025-05-01T11_59_48Z.html  cars2025-05-01T11_59_49Z.html  cars2025-05-01T11_59_51Z.html  cars2025-05-01T11_59_52Z.html  cars2025-05-01T11_59_54Z.html  cars2025-05-01T11_59_55Z.html  cars2025-05-01T11_59_56Z.html  (+794 more)
(+7 files in other folders)
