[project]
name = "dossier-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.5",
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "nbformat>=4.2.0",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "pydeck>=0.9.1",
    "replicate>=1.0.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
]
